# kiwicraft

./: CMakeLists.txt  README.md  conanfile.txt
shaders/: fragment.glsl
src/: main.cpp
src/engine/: engine.cpp  engine.hpp  input_handler.cpp  input_handler.hpp  window.cpp  window.hpp
src/renderer/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
